--- a/ModConfig.json
+++ b/ModConfig.json
@@ -1,8 +1,8 @@
 {
   "ModId": "hifipc.nopillarbox",
   "ModName": "Pillar/Letter Box Removal",
-  "ModAuthor": "M&M",
-  "ModVersion": "1.0.0",
+  "ModAuthor": "M\u0026M",
+  "ModVersion": "1.0.1",
   "ModDescription": "Removes the pillar/letter boxing from certain scenes and all cutscenes. Will cause some visual issues.",
   "ModDll": "hifipc.nopillarbox.dll",
   "ModIcon": "Preview.png",
@@ -10,14 +10,43 @@
   "ModR2RManagedDll64": "x64/hifipc.nopillarbox.dll",
   "ModNativeDll32": "",
   "ModNativeDll64": "",
+  "Tags": [],
+  "CanUnload": false,
+  "HasExports": false,
   "IsLibrary": false,
   "ReleaseMetadataFileName": "hifipc.nopillarbox.ReleaseMetadata.json",
-  "PluginData": {},
+  "PluginData": {
+    "GitHubDependencies": {
+      "IdToConfigMap": {
+        "reloaded.sharedlib.hooks": {
+          "Config": {
+            "UserName": "Sewer56",
+            "RepositoryName": "Reloaded.SharedLib.Hooks.ReloadedII",
+            "UseReleaseTag": true,
+            "AssetFileName": "reloaded.sharedlib.hooks.zip"
+          },
+          "ReleaseMetadataName": "Sewer56.Update.ReleaseMetadata.json"
+        }
+      }
+    },
+    "GitHubRelease": {
+      "UserName": "ActualMandM",
+      "RepositoryName": "hifipc.nopillarbox",
+      "UseReleaseTag": true,
+      "AssetFileName": "Mod.zip"
+    },
+    "GameBanana": {
+      "ItemType": "Mod",
+      "ItemId": 494019
+    }
+  },
   "IsUniversalMod": false,
-  "ModDependencies": [ "reloaded.sharedlib.hooks" ],
+  "ModDependencies": [
+    "reloaded.sharedlib.hooks"
+  ],
   "OptionalDependencies": [],
   "SupportedAppId": [
     "hi-fi-rush.exe"
   ],
-  "ProjectUrl": ""
+  "ProjectUrl": "https://gamebanana.com/mods/494019"
 }
